# kbase

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  README_zh.md  build_dmg.sh  build_exe.bat  install.bat  install.sh  kbase.spec  kbase_win.spec  launcher.py  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  setup.py  version.json
.claude/: settings.json
.github/workflows/: release.yml
kbase/: __init__.py  agent_loop.py  chat.py  chunk.py  cli.py  config.py  desktop.py  enhance.py  extract.py  graph.py  ingest.py  search.py  store.py  vision.py  watch.py  web.py  websearch.py
kbase-desktop/: build-fat.bat  build-fat.sh  package-lock.json  package.json
kbase-desktop/scripts/: setup-python.sh
kbase-desktop/src/: index.html
kbase-desktop/src-tauri/: Cargo.toml  tauri.conf.json
kbase-desktop/src-tauri/capabilities/: default.json
kbase-desktop/src-tauri/icons/: icon.icns
kbase-desktop/src-tauri/scripts/: setup-python.bat
kbase-desktop/src-tauri/src/: main.rs
kbase/connectors/: __init__.py  feishu.py  feishu_guide.py
kbase/skills/: __init__.py  harness.py  tool_excel.py  tool_file.py  tool_search.py  tools.py
kbase/skills/templates/: document-enrich.md
kbase/static/: index.html
kbase/static/css/: app.css
kbase/static/js/: app.js
tests/: conftest.py  test_chunk.py  test_config.py  test_enhance.py  test_web_api.py
