[package]
name = "kbase-desktop"
version = "0.7.0"
description = "KBase — Local Knowledge Base"
authors = ["PenguinMiaou"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "io-util"] }
reqwest = { version = "0.12", features = ["json"], default-features = false }
dirs = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
